[metadata]
name = mqtt_saver
version = 0.0.1
author = James Ball
description = Save live data
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/mqtt_saver

[options]
packages = find:
install_requires =
    pandas
    centralcontrol
    paho-mqtt
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

